<resources>
    <string name="app_name">GeeksRun</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_hud">HUD</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_lap">Lap</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="hud_time">"Zeit: "</string>
    <string name="hud_speed">"Geschwindigkeit: "</string>
    <string name="hud_way">"Strecke: "</string>
    <string name="hud_average_speed">&quot;m. Geschwindigkeit: &quot;</string>
    <string name="lap_radio0">500m</string>
    <string name="lap_radio1">1km</string>
    <string name="lap_radio2">2km</string>
    <string name="lap_radio3">5km</string>
    <string name="main_start">Training</string>
    <string name="main_history">Trainingsverlauf</string>
    <string name="main_options">Einstellungen</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_history">History</string>
    <string name="main_exit">Beenden</string>
    <string name="static_radio1">Höhe</string>
    <string name="static_radio2">Geschwindigkeit</string>
    <string name="static_radio3">Energie</string>
    <string name="hud_button_start">Start</string>
    <string name="hud_button_stop">Stop</string>
    <string name="stat_scale_time">10 Minuten</string>
    <string name="stat_scale_way_meter">100 Meter</string>
    <string name="stat_scale_kilometer">Kilometer</string>
    <string name="stat_check_speed">Tempo</string>
    <string name="stat_height">Höhenmeter</string>
    <string name="stat_energie">Verbrennung</string>
    <string-array name="pers_sex">
        <item>Frau</item>
        <item>Mann</item>
    </string-array>
    <string-array name="pers_sex_id">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="help_nav_txt">Um zu navigieren kannst du die grünen Balken unterhalb deiner Bildschirmanzeige nutzen. Streiche je nach Bedarf in die Richtung, die du möchtest.</string>
    <string name="help_musicplayer_txt">Um den Musikplayer zu bedienen musst du zuerst eine Playlist erstellen. Um dies zu machen gehst du einfach in die Slidebar (Display/Menu bzw. Button oben Rechts) und wählst den Menupunkt (Playlist erstellen). So wie du die einzelnen Titel markierst, werden sie zum Schluss auch wiedergegeben. Klicke zum Schluss auf den letzten Eintrag (fertig). Du kannst mit einem einfachen Klick, die Ordner (Einträge ohne Dateierweiterung) öffnen. Zusätzlich kannst du bis zu 50 Titel gleichzeitig auswählen mit dem Button "alles auswählen". Mit dem Button "zurück" navigierst du bis zum referenzierten Musikordner zurück..</string>
    <string name="help_music_ordner_txt">Du kannst in den Einstellungen einen Ordner eintragen, der deine Musiktitel enthält.In den Einstellungen kannst du mittels GeeksPlora auf die Ordnerstruktur zugreifen. Öffnet sich deine Ordnerstruktur, kannst du auf die Ordner klicken oder die Buttons ganz unten nutzen, um zu navigieren, oder einen Ordner als Musikordner zu speichern. In den Erweiterten Einstellungen kannst du den Dateipfad nachlesen.</string>
    <string name="help_export_txt">Wenn du deine gelaufenen Daten exportieren möchtest, dann gehe in das Menu Trainingsverlauf. Dort werden Dir alle Trainings angezeigt, die du bisher gelaufen bist. Drücke auf eines der Trainings und wähle exportieren. Danach wird das Training in deinen Exportordner in Form einer Textdatei exportiert. Ist kein Exportordner ausgewählt, wird im Falle eines Exports ein Ordner erstellt.</string>
    <string name="help_export_ordner_txt">Um den Export erfolgreich auszuführen, benötigt die App einen Ordner, wohin sie die Daten exportieren kann. In den Einstellungen kannst du mittels GeeksPlora auf die Ordnerstruktur zugreifen. Öffnet sich deine Ordnerstruktur, kannst du auf die Ordner klicken oder du kannst die Buttons ganz unten nutzen, um zu navigieren, oder einen Ordner als Musikordner zu speichern.</string>
    <string name="help_lap_txt">Die in der Activity Runden angezeigte Tabelle, zeigt dir die gelaufenen Werte an. Die untersten Werte sind die Zusammenfassung des Trainings. Das (g) steht hier für gesamt. Die einzelnen Spalten geben folgende Werte wieder: deine gelaufenen Kilometer, die Zeit für die jeweilige Runde, die mittlere Geschwindigkeit der Runde und die verbranten Kilokalorie der Runde.</string>
    <string name="help_music_tipp_txt">Mit einem &quot;/&quot; nach dem Musikordner kannst du Dir die Dateien, der Unterordner in der Musikauswahl anzeigen lassen.</string>
	<string name="help_history_sort_txt">In den Trainingsverläufen gibt es die Möglichkeit die Einträge zu sortieren. Klicke auf einen Eintrag einfach etwas länger, danach erscheint ein Hinweis und die Möglichkeit nach Name oder Datum zu sortieren. Das Datum steht hier für die letzte Änderung; es ist nicht das Erstellungsdatum gemeint.</string>
			<string-array name="yes_no">
        <item>ja</item>
        <item>nein</item>
    </string-array>
    <string name="title_activity_main_option">MainOption</string>
    <string name="title_activity_procress">Procress</string>
    <string name="help_import_txt">Wenn du deine gelaufenen Daten importieren möchtest, dann gehe in das Menu Trainingsverlauf. Oben rechts findest du den Menupunkt IMPORTIEREN. Klicke darauf und wähle aus dem Importordner dein Training, danach wird das Training in die Ordnerstruktur von GeeksRun importiert. </string>
    <string name="help_import_ordner">Um den Import erfolgreich auszuführen, benötigt die App einen Ordner, wohin sie die Daten importieren kann. In den Einstellungen kannst du mittels GeeksPlora auf die Ordnerstruktur zugreifen. Öffnet sich deine Ordnerstruktur,  kannst du auf die Ordner klicken oder du kannst die Buttons ganz unten nutzen, um zu navigieren, oder einen Ordner als Importordner zu speichern. In den Erweiterten Einstellungen kannst du den Dateipfad nachlesen.</string>
    <string name="title_activity_performance">Performance</string>
    <string name="main_awards">Karriere</string>
    <string name="title_activity_leistungsprofil">Leistungsprofil</string>
    <string name="title_activity_geekspokal">Geekspokal</string>
    <string name="title_activity_pokal_km">Pokal_km</string>
    <string name="title_activity_pokal_zeit">Pokal_zeit</string>
    <string name="title_activity_pokal__kalorien">Pokal_Kalorien</string>
    <string name="title_activity_pokal__punkte">Pokal_Punkte</string>
</resources>