<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/geeksrun_start" />

                <Button
                    android:id="@+id/main_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="15dp"
                    android:text="@string/main_exit" />

                <Button
                    android:id="@+id/main_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/main_button1"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="21dp"
                    android:text="@string/main_history" />

                <Button
                    android:id="@+id/main_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/main_button4"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/main_start" />

                <Button
                    android:id="@+id/main_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/main_button5"
                    android:layout_marginTop="16dp"
                    android:layout_toRightOf="@+id/main_button2"
                    android:text="@string/main_awards" />

                <Button
                    android:id="@+id/main_button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="34dp"
                    android:text="@string/main_options" />
                
</RelativeLayout>
