<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/touch_light_effekt"
        />

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/switch_training"
        android:layout_alignParentTop="true"
        class="com.google.android.gms.maps.MapFragment" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:text="Hauptmenu" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:text="Karte" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:text="@string/hud_speed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:text="@string/hud_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView02"
        android:layout_alignParentLeft="true"
        android:text="@string/hud_way"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Switch
        android:id="@+id/switch_geoplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:text="Geoplayer " />

    <Switch
        android:id="@+id/switch_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/switch_geoplayer"
        android:layout_alignParentLeft="true"
        android:text="Challenge " />

    <Switch
        android:id="@+id/switch_training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/switch_challenge"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/switch_challenge"
        android:text="Training " />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:text="@string/hud_average_speed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_training"
        android:layout_toLeftOf="@+id/TextView01"
        android:text="ToggleButton"
        android:textOff="play"
        android:textOn="stop" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/switch_training"
        android:layout_toRightOf="@+id/switch_geoplayer"
        android:text="Musikplayer"
        android:textAppearance="?android:attr/textAppearanceMedium" />
  <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

	</ListView>

	<SlidingDrawer
	    android:id="@+id/slidingDrawer1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignParentBottom="true"
	    android:content="@+id/content"
	    android:handle="@+id/handle" 
	    android:orientation="horizontal"
	    android:alpha="80"
	    
	    >

	    <Button
	        android:id="@+id/handle"
	        android:layout_width="29dp"
	        android:layout_height="126dp"
	        android:background="@drawable/btn_slide" />

	    <LinearLayout
	        android:id="@+id/content"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical" 
	        android:background="#000000"
	        >

	        <TextView
	            android:id="@+id/hudslide_textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Dashboard"
	            android:textColor="#FFFFFF"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <ProgressBar
	            android:id="@+id/hudslide_progressBar1"
	            style="?android:attr/progressBarStyleHorizontal"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:progress="100" 
	            android:progressTint="@color/geek_green"/>

	        <TextView
	            android:id="@+id/hudslide_textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Musikplayer"
	            android:textColor="#FFFFFF"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <Button
	            android:id="@+id/hudslide_button1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:background="#000000"
	            android:layout_marginLeft="10dp"
	            android:text="Playlist erstellen" />

	        <TextView
	            android:id="@+id/hudslide_textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:text="Challenge"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <Button
	            android:id="@+id/hudslide_button2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:background="#000000"
	            android:layout_marginLeft="10dp"
	            android:text="Läufer wählen" />

	        <TextView
	            android:id="@+id/hudslide_textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:text="Geoplayer"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <Button
	            android:id="@+id/hudslide_button3"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:background="#000000"
	            android:layout_marginLeft="10dp"
	            android:text="Geoplayerliste wählen" />

	        <Button
	            android:id="@+id/hudslide_button4"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:background="#000000"
	            android:text="Soundeinstellungen" />
	        
	        <Button
	            android:id="@+id/hudslide_button7"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:background="#000000"
	            android:layout_marginLeft="10dp"
	            android:text="Lauf speichern" />

	        <TextView
	            android:id="@+id/hudslide_textView5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:background="#000000"
	            android:text="Menu"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <Button
	            android:id="@+id/hudslide_button5"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:background="#000000"
	            android:layout_marginLeft="10dp"
	            android:text="Hauptmenu" />

	        <Button
	            android:id="@+id/hudslide_button6"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:background="#000000"
	            android:layout_marginLeft="10dp"
	            android:text="Map" />
	    </LinearLayout>
	</SlidingDrawer>
</RelativeLayout>